--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "node-format-date": "^1.0.9",
     "number-currency-format": "^1.0.10",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
